# magrathean-universe

./: .gitignore  CMakeLists.txt  Makefile  many_systems_many_planets.config  one_system_many_planets_with_moon.config  universe.config
include/: Camera.h  Shader.h  Sphere.h  UniverseObjects.h  cfg.h  macros.h  util.h
shaders/: f.glsl  v.glsl
src/: Sphere.cpp  UniverseObjects.cpp  cfg.cpp  main.cpp  util.cpp
